# cpp_win_named_pipes

./: .gitignore  CMakeLists.txt  README.md  main.cpp  npipe.cpp  npipe.h  npipe_server.cpp  npipe_server.h  test.cpp
